Add icon and simple test environment for visuals

--- a/src/index.html
+++ b/src/index.html
@@ -23,6 +23,7 @@
 		<!-- here all thumbnails will be loaded -->
 	</div>
     <button disabled id="confirm">Confirm</button>
+	<button disabled id="test-visuals">Test Visuals</button>
   </div>
   <div id="loading">
 	  <!-- loading animation -->
